problem in my mark-up, flex wrap not working. stopping point

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -112,7 +112,7 @@ footer {
 
 .container {
 	width: 900px;
-	margin: auto;
+	margin: 0 auto;
 }
 
 #ServiceHead .main-content p {
@@ -124,33 +124,15 @@ footer {
 	font-size: 30px;
 }
 
-/* #info .container div{
-	display: flex;
-	border: 2px solid;
-}
 
-#info .infochild {
-	display: flex;
-	flex-direction: column;
-} */
-
-
-
-#info1 .container div {
-	display: flex;
-	border: 2px solid; 
-	width: 300px;
-}
-
-#info2 .container div {
-	display: flex;
-	border: 2px solid;
-	width: 300px;
+#allinfo .container {
+	display:flex;
+	margin: 15px;
 }
 
 #allinfo .container div {
-	display: flex;
-	flex-wrap: wrap:
+	border: 1px solid;
+	justify-content: space-around;
 }
 
 
